--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
   },
   "dependencies": {
     "base64-js": "^1.5.1",
-    "meta-buffer-pack": "^0.1.3"
+    "meta-buffer-pack": "file:../meta-buffer-pack"
   }
 }
