--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^4.0.0",
+    "mocha": "^9.2.2",
     "rollup": "^2.36.2",
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
     "base64-js": "^1.5.1",
-    "meta-buffer-pack": "file:../meta-buffer-pack"
+    "meta-buffer-pack": "^0.1.12"
   }
 }
