--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "otpus",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "pseudo otp generator & cryptography tool",
   "main": "src/otpus.js",
   "cjs": "dist/otpus.cjs",
@@ -21,12 +21,15 @@
     "url": "git+https://github.com/make-robot/otpus.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/make-robot/otpus/issues"
   },
   "homepage": "https://github.com/make-robot/otpus#readme",
+  "author": {
+    "name": "Lee Dong Eun",
+    "email": "sixgen@gmail.com"
+  },
+  "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
