--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "otpus",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Cipher for Node & browser",
   "main": "src/otpus.js",
   "cjs": "dist/otpus.cjs",
@@ -20,7 +20,16 @@
     "type": "git",
     "url": "git+https://github.com/make-robot/otpus.git"
   },
-  "keywords": ["암호","crypto","encrypt","XOR","OTP","SHA","HMAC","random"],
+  "keywords": [
+    "암호",
+    "crypto",
+    "encrypt",
+    "XOR",
+    "OTP",
+    "SHA",
+    "HMAC",
+    "random"
+  ],
   "bugs": {
     "url": "https://github.com/make-robot/otpus/issues"
   },
