--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "homepage": "https://github.com/make-robot/otpus#readme",
   "author": {
-    "name": "Lee Dong Eun ( 이 동 은 )",
+    "name": "Lee Dong Eun",
     "email": "sixgen@gmail.com"
   },
   "license": "ISC",
@@ -44,12 +44,12 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^4.0.0",
-    "mocha": "^9.2.2",
+    "mocha": "^10.0.0",
     "rollup": "^2.36.2",
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
     "base64-js": "^1.5.1",
-    "meta-buffer-pack": "^0.1.14"
+    "meta-buffer-pack": "^0.2.0"
   }
 }
