--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   },
   "dependencies": {
     "base64-js": "^1.5.1",
-    "meta-buffer-pack": "^1.1.4",
-    "virtual-buffer": "file:../virtual-buffer"
+    "meta-buffer-pack": "^1.1.4"
   }
 }
