--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "otpus",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "General purpose cipher for Node & browser",
   "main": "src/index.js",
   "cjs": "dist/otpus.cjs",
@@ -28,10 +28,10 @@
     "HMAC",
     "random"
   ],
-  "homepage": "https://github.com/congtrol/otpus#readme",
+  "homepage": "https://github.com/remocons/otpus#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/congtrol/otpus.git"
+    "url": "git+https://github.com/remocons/otpus.git"
   },
   "author": {
     "name": "Dongeun Lee",
@@ -48,6 +48,6 @@
   },
   "dependencies": {
     "base64-js": "^1.5.1",
-    "meta-buffer-pack": "^1.1.4"
+    "meta-buffer-pack": "^1.3.0"
   }
 }
